main page update

--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Adopt a Kitten</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet"/>
+    <title>Salmon Cookies</title>
+    <link href="css/mstyle.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
     <header>
-      <h1></h1>
+      <h1>Salmons Cookies Website</h1>
     </header>
+    <nav>
+      <ul>
+        <li><a href="">Sales Page</a></li>
+      </ul>
+    </nav>
     <main>
-      <h2></h2>
+      <h2>Our Locations </h2>
       <div>
-        
+        <ol>
+        <li>Seattle</li>
+        <li>Tokyo</li>
+        <li>Dubai</li>
+        <li>Paris</li>
+        <li>Lima</li>
+      </ol>
       </div>
+      <p>Opining Hours : 6:00am - 7:00pm</p>
     </main>
     <footer>
+      <p>contact us : 0790990968</p>
+      <p>Salmons Cookies&copy;
+      </p>
     </footer>
     <script src="js/app.js"></script>
   </body>
