--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,11 @@
   <body>
     <header>
       <h1>Salmon Cookies</h1>
+      <nav>
+        <ul>
+          <li><a href="https://zaidsh98.github.io/cookie-stand/">Main Page</a></li>
+        </ul>
+      </nav>
      <p> <img src="https://codefellows.github.io/code-201-guide/curriculum/class-06/lab/assets/salmon.png" alt=""></p>
     </header>
     <main>
