--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     </header>
     <nav>
       <ul>
-        <li><a href="">Sales Page</a></li>
+        <li><a href="https://zaidsh98.github.io/cookie-stand/sales">Sales Page</a></li>
       </ul>
     </nav>
+    <div id="container">
+      <ul>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/chinook.jpg?raw=true" alt=""></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/cutter.jpeg?raw=true" alt=""></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/family.jpg?raw=true" alt=""></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/fish.jpg?raw=true" alt=""></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/frosted-cookie.jpg?raw=true" alt=""></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/salmon.png?raw=true" alt=""></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/shirt.jpg?raw=true" alt=""></li>
+     </ul>
+  </div>
     <main>
       <h2>Our Locations </h2>
       <div>
