--- a/sales.html
+++ b/sales.html
@@ -16,6 +16,25 @@
     </header>
     <main>
       <h1>Shops Sales</h1>
+      <form id="cookieForm">
+        <fieldset>
+           <legend>Cookies Stand</legend>
+  &nbsp;&nbsp; &nbsp;<label for="locationF">Enter Shop Locatio :</label>
+          <input type="text" id="locationF">
+          <br><br>
+          <label for="minF">Minimum Customers :</label>
+          &nbsp;<input type="number" id="minF">
+          <br><br>
+          <label for="maxF">Maximum Customers :</label>
+          &nbsp;<input type="number" id="maxF">
+          <br><br>
+          <label for="avrgF">Average Cookies :</label>
+ &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;<input type="number" step="any" id="avrgF">
+          <br><br>
+          <input type="submit" value="submit">
+        </fieldset>
+      </form>
+      <br>
       <div id="cookiesSales">
         
       </div>
