--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
         <li><a href="https://zaidsh98.github.io/cookie-stand/sales">Sales Page</a></li>
       </ul>
     </nav>
+    <h1><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/salmon.png?raw=true" alt=""></h1>
     <div id="container">
       <ul>
-        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/chinook.jpg?raw=true" alt=""></li>
-        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/cutter.jpeg?raw=true" alt=""></li>
-        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/family.jpg?raw=true" alt=""></li>
-        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/fish.jpg?raw=true" alt=""></li>
-        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/frosted-cookie.jpg?raw=true" alt=""></li>
-        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/salmon.png?raw=true" alt=""></li>
-        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/shirt.jpg?raw=true" alt=""></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/chinook.jpg?raw=true" alt="" class="pics"></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/cutter.jpeg?raw=true" alt="" class="pics"></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/family.jpg?raw=true" alt="" class="pics"></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/fish.jpg?raw=true" alt="" class="pics"></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/frosted-cookie.jpg?raw=true" alt="" class="pics"></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/salmon.png?raw=true" alt="" class="pics"></li>
+        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/shirt.jpg?raw=true" alt="" class="pics"></li>
      </ul>
   </div>
     <main>
