--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Salmon Cookies</title>
     <link href="css/mstyle.css" type="text/css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <header>
@@ -21,7 +24,6 @@
         <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/family.jpg?raw=true" alt="" class="pics"></li>
         <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/fish.jpg?raw=true" alt="" class="pics"></li>
         <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/frosted-cookie.jpg?raw=true" alt="" class="pics"></li>
-        <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/salmon.png?raw=true" alt="" class="pics"></li>
         <li><img src="https://github.com/LTUC/amman-201d27/blob/main/class-08/lab-b/assets/shirt.jpg?raw=true" alt="" class="pics"></li>
      </ul>
   </div>
